# Aomo

./: .gitignore  CMakeLists.txt  README.md  clean.sh
.github/workflows/: cmake-multi-platform.yml
doc/: 预处理器.txt
include/: clarg.h  config.h  getopt.h  print.h  symbol.h
include/parser/: parser.h
src/: aomo.cpp  clarg.cpp  config.h.in  getopt.cpp  print.cpp
src/parser/: parser.cpp
tests/: a.aomop
